dashboard/anomaly-parser/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: anomaly-parser
spec:
  selector: 
    app: anomaly-parser
  ports:
    - name: http
      port: 8080
      targetPort: http
